email subscription part2
Former-commit-id: 9da910df1968b4b194321c4e1f58068ef6f30094

--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -16,6 +16,8 @@
       description: 'Includes HTML/CSS and JavaScript which runs in browser (AngularJS, React and similar JS frameworks)'
       url: /remote-frontend-jobs
       datafile: TECH1_frontend
+      mailGroupDay: 10484476
+      mailGroupWeek: 10484474
 
     - title: Remote mobile (iOS, Android, Windows Phone) jobs
       home_title: Mobile (iOS, Android, Windows Phone) jobs
@@ -26,6 +28,8 @@
       description: 'Includes iOS, Android, Windows Phone, Apache Cordova/PhoneGap, Xamarin and other technologies for mobile apps'
       url: /remote-mobile-jobs
       datafile: TECH1_mobile
+      mailGroupDay: 10484478
+      mailGroupWeek: 10484482
 
     - title: Remote Java jobs
       home_title: Java jobs
@@ -36,6 +40,8 @@
       description: 'Includes backend- and web-programming with Java and Scala'
       url: /remote-java-jobs
       datafile: TECH1_java
+      mailGroupDay: 10487140
+      mailGroupWeek: 10487142
 
     - title: Remote (Big) Data or Machine Learning or Scientist jobs
       home_title: (Big)Data, Machine Learning, Scientist jobs
@@ -46,6 +52,8 @@
       description: 'Includes everything related to statistics or mathematics, Big Data, Machine Learning, Data Science. R programming language, Mathlab, neural networks, Apache Hadoop, Apache Spark.'
       url: /remote-big-data-science-machine-learning-jobs
       datafile: TECH1_bigdata-ml
+      mailGroupDay: 10487146
+      mailGroupWeek: 10484482
 
     - title: Remote Python jobs
       home_title: Python jobs
@@ -56,6 +64,8 @@
       description: 'Includes Django, Flask, SQLAlchemy and other Python frameworks/libraries'
       url: /remote-python-jobs
       datafile: TECH1_python
+      mailGroupDay: 10487152
+      mailGroupWeek: 10487154
 
     - title: Remote C# and .NET jobs
       home_title: C# and .NET jobs
@@ -66,6 +76,8 @@
       description: 'Includes C# and other .NET languages; VB.NET, ASP.NET, WPF, desktop applications for Windows, Microsoft Azure and other Microsoft technologies.'
       url: /remote-dotnet-jobs
       datafile: TECH1_dotnet
+      mailGroupDay: 10487178
+      mailGroupWeek: 10487176
 
     - title: Remote Ruby jobs
       home_title: Ruby jobs
@@ -76,6 +88,8 @@
       description: "Includes frameworks like Ruby on Rails, Sinatra, RSpec"
       url: /remote-ruby-jobs
       datafile: TECH1_ruby
+      mailGroupDay: 10487196
+      mailGroupWeek: 10487198
 
     - title: Remote Node.js jobs
       home_title: Node.js jobs
@@ -87,6 +101,8 @@
       description: 'Includes backend JavaScript technologies like Node.js, Meteor, Express.js'
       url: /remote-nodejs-jobs
       datafile: TECH1_nodejs
+      mailGroupDay: 10487246
+      mailGroupWeek: 10487248
 
     - title: "Remote Go, or Golang-related jobs"
       home_title: "Go, or Golang-related jobs"
@@ -97,6 +113,8 @@
       description: 'Includes everything related to Go programming language'
       url: /remote-go-golang-jobs
       datafile: TECH1_go
+      mailGroupDay: 10487260
+      mailGroupWeek: 10487262
 
     - title: Remote C/C++ jobs
       home_title: C/C++ jobs
@@ -107,6 +125,8 @@
       description: 'Includes technologies like Qt, GCC, glibc, STL, Boost and Assembly language'
       url: /remote-c-plus-plus-jobs
       datafile: TECH1_c
+      mailGroupDay: 10487300
+      mailGroupWeek: 10487302
 
     - title: Remote PHP jobs
       home_title: PHP jobs
@@ -118,6 +138,8 @@
       description: 'Includes PHP frameworks like WordPress, Drupal, Laravel, Symfony, CodeIgniter, Zend'
       url: /remote-php-jobs
       datafile: TECH1_php
+      mailGroupDay: 10494936
+      mailGroupWeek: 10494938
 
     - title: Remote Apple-related jobs
       home_title: Apple-related jobs
@@ -128,6 +150,8 @@
       description: 'Includes MacOS, Xcode, Cocoa Touch and other Apple-related technologies.'
       url: /remote-apple-jobs
       datafile: TECH1_apple
+      mailGroupDay: 10494924
+      mailGroupWeek: 10494926
 
     - title: Remote embedded applications/devices jobs
       home_title: Embedded applications/devices jobs
@@ -138,6 +162,8 @@
       description: 'Includes firmware and hardware development, microcontroller programming, technologies like Embedded Linux, Arduino, ARM, robots'
       url: /remote-embedded-jobs
       datafile: TECH1_embedded
+      mailGroupDay: 10494948
+      mailGroupWeek: 10494950
 
     - title: Remote gamedev jobs
       home_title: Game development
@@ -148,6 +174,8 @@
       description: 'Includes: game development, game engines like Unity, Unreal Engine, GameMaker, CryEngine, Cocos2d-x'
       url: /remote-gamedev-jobs
       datafile: TECH1_gamedev
+      mailGroupDay: 10494982
+      mailGroupWeek: 10494984
 
     - title: "Remote jobs with other technologies"
       home_title: Other technologies
@@ -158,6 +186,8 @@
       description: 'Includes Perl, Clojure, Haskell, Elixir, Rust, Shell script, Lisp, Erlang, OCaml, F#'
       url: /remote-other-technologies-jobs
       datafile: TECH1_other
+      mailGroupDay: 10495054
+      mailGroupWeek: 10495056
 
 - title: '&nbsp;Remote tech jobs<small>For techies who are not developers</small>'
   tagline:
@@ -178,6 +208,8 @@
       url: /remote-devops-sysadmin-sre-jobs
       datafile: TITLE1_admin
       col: 2
+      mailGroupDay: 10495080
+      mailGroupWeek: 10495084
 
     - title: Remote QA engineer jobs
       home_title: QA engineer jobs
@@ -188,6 +220,8 @@
       url: /remote-qa-test-engineer-jobs
       datafile: TITLE1_qa
       col: 2
+      mailGroupDay: 10495130
+      mailGroupWeek: 10495132
 
     - title: Remote solution engineer (solution architect) jobs
       home_title: Solution engineer (solution architect) jobs
@@ -198,6 +232,8 @@
       url: /remote-solution-engineer-architect-jobs
       datafile: TITLE1_solution
       col: 2
+      mailGroupDay: 10495170
+      mailGroupWeek: 10495172
 
     - title: Remote database (RDBMS) developer and admin (DBA) jobs
       home_title: Database (RDBMS) developer and admin (DBA) jobs
@@ -208,6 +244,8 @@
       url: /remote-dbms-developer-admin-dba-jobs
       datafile: TITLE1_dbms
       col: 2
+      mailGroupDay: 10495204
+      mailGroupWeek: 10495208
 
     - title: Remote integration engineer jobs
       home_title: Integration engineer jobs
@@ -218,6 +256,8 @@
       url: /remote-integration-build-automation-engineer-jobs
       datafile: TITLE1_integration
       col: 2
+      mailGroupDay: 10495212
+      mailGroupWeek: 10495216
 
 - title: '&nbsp;Remote non-tech jobs<small>"Remote" is not only for engineers!</small>'
   tagline: 3
@@ -237,6 +277,8 @@
       url: /remote-designer-graphic-video-artist-jobs
       datafile: TITLE1_designer
       col: 3
+      mailGroupDay: 10495250
+      mailGroupWeek: 10495252
 
     - title: Remote support specialist jobs
       home_title: Support specialist jobs
@@ -247,6 +289,8 @@
       url: /remote-customer-support-jobs
       datafile: TITLE1_support
       col: 3
+      mailGroupDay: 10495348
+      mailGroupWeek: 10495350
 
     - title: Remote (technical) writer/editor jobs
       home_title: (technical) Writer/editor jobs
@@ -257,6 +301,8 @@
       url: /remote-copywriter-editor-jobs
       datafile: TITLE1_writer
       col: 3
+      mailGroupDay: 10495358
+      mailGroupWeek: 10495360
 
     - title: Remote marketing, product specialist, SEO jobs
       home_title: Marketing, product specialist, SEO jobs
@@ -267,6 +313,8 @@
       url: /remote-marketing-product-seo-jobs
       datafile: TITLE1_product
       col: 3
+      mailGroupDay: 10495388
+      mailGroupWeek: 10495392
 
     - title: Remote sales jobs
       home_title: Sales jobs
@@ -277,6 +325,8 @@
       url: /remote-sales-jobs
       datafile: TITLE1_sales
       col: 3
+      mailGroupDay: 10495988
+      mailGroupWeek: 10495990
 
     - title: Remote manager/executive jobs
       home_title: Manager/executive jobs
@@ -287,6 +337,8 @@
       url: /remote-manager-executive-jobs
       datafile: TITLE1_manager
       col: 3
+      mailGroupDay: 10496140
+      mailGroupWeek: 10496142
 
     - title: Remote recruiter/HR jobs
       home_title: Recruiter/HR jobs
@@ -297,3 +349,5 @@
       url: /remote-hr-recruiter-jobs
       datafile: TITLE1_HR
       col: 3
+      mailGroupDay: 10496254
+      mailGroupWeek: 10496258
