json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,55 @@
 {
  "items": [
   {
+    "id": "pPymzmZ4Swq3WWpN-06Dgw",
+    "url": "https://news.ycombinator.com/item?id=18116163",
+    "title": "Stopwatch (http://stopwatch.com) | iOS Engineer | 100% remote",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=6, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 1, 2018 9:53:09 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Stopwatch (<a href='http://stopwatch.com' rel='nofollow'>http://stopwatch.com</a>) | iOS Engineer | 100% remote<p>Stopwatch is building a new social network. Interesting product with some new ideas. Small remote team of 4 and some great investors. We’re currently pre-launch.</p><p>We're looking for an additional iOS engineer to help build the app.</p><p>If you’re interested in learning more please email jon@stopwatch.com.</p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "IGNJUj_MQAS1UK5OBDC8og",
     "url": "https://www.remotejobr.com/jobs/ios-developer",
     "title": "iOS Developer",
