json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,243 @@
 {
  "items": [
   {
+    "id": "vdiVHvPPScWKZWNfjHDKqQ",
+    "url": "https://remote.co/job/clinical-reviewer-2/",
+    "title": "Clinical Reviewer",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "CareCentrix",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 5:12:56 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Clinical Reviewer at <span>CareCentrix</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Job Locations: Remote</strong></p><p><strong>Job ID:</strong> 2018-6236</p><p><strong>Category:</strong> Clinical/Utililization Management</p><p><strong>Overview</strong></p><p>Be part of something bigger – make an impact in a growth organization! CareCentrix is committed to making the home the center of patient care.</p><p>The core function of the Clinical Reviewer is to review utilization information concerning patient care for CareCentrix, and to match those needs to available care options, within the CareCentrix guidelines and specific plan payer criteria.</p><p><strong>Responsibilities</strong></p><ul><li>Acts as a clinical resource to department care coordinators, providing expertise and clinical knowledge.</li><li>Uses clinical expertise, reviews utilization information concerning patient care and matches those needs to available care options, within the CareCentrix guidelines and specific plan payer criteria.</li><li>Verifies completed case verifications funneled through Triage, verifying information, applying business rules and determining the next steps.</li><li>Receives/responds to incoming calls from referral sources/potential clients, exchanges information to identify the clients’ needs and determines CareCentrix’ ability to meet them.</li><li>Receives and responds to requests from unlicensed staff regarding scripted clinical questions and issues.</li><li>Performs an initial evaluation of the referrals appropriateness for CareCentrix services, researches/identifies all potential payer sources and determines the primary payer. Documents demographic/clinical/payer information and determines coverage availability for requested services and passes information on in a timely manner.</li><li>Holds all referrals until all information is verified as complete and the next steps are determined.</li><li>Records the outcome of all inquiries and referral calls received, and makes follow-up calls when an inquiry or referral cannot be serviced.</li><li>Tracks/reports on inquiries/referrals and identifies alternative resources when CareCentrix solutions are not available.</li></ul><p><strong>Qualifications</strong></p><ul><li><strong>Associate’s Degree or Diploma in Nursing/Practical Nursing.</strong></li><li>Must be an active Registered Nurse/LPN/LVN (based on allowable state practice act) license in any state(s) or jurisdiction in the United States is required. Licensed professionals are required to possess a current license to practice without restrictions.</li><li>Minimum of 2 years of experience.</li><li>Broad knowledge of health care delivery/managed care regulations, contract terms/stipulations, prior utilization management/review experience, and governmental home health agency regulations preferred.</li></ul>        </div><div>        <a href='https://careers-carecentrix.icims.com/jobs/6236/clinical-reviewer/job' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "oRkdjdkISaGoF5KC-NTwuQ",
+    "url": "https://remote.co/job/rural-health-medical-coder/",
+    "title": "Rural Health Medical Coder",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=5, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "Navigant Cymetrix",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 5:05:36 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Rural Health Medical Coder at <span>Navigant Cymetrix</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Job ID</strong></p><p>9403</p><p><strong>Location</strong></p><p><strong>Remote Location</strong></p><p><strong>Full/Part Time</strong></p><p>Full-Time</p><p><strong>Regular/Temporary</strong></p><p>Regular</p><p><strong>Practice Information</strong></p><p>Navigant Cymetrix unites the strengths of four category-leading companies to address the complexities of today’s healthcare system. We design, develop and implement integrated, patient-centered solutions for sustained improvements in performance and profitability, working collaboratively across a spectrum of customers that encompasses hospitals, health systems, physician practice groups and payers.</p><p><strong>Responsibilities</strong></p><p>The <strong>Rural Health Medical Coder</strong>&nbsp;<strong>(Remote)&nbsp;</strong>will view clinical documentation and diagnostic results as appropriate to extract data and apply appropriate ICD- 10 Diagnosis and Procedure codes, along with CPT/HCPCS codes as defined for the service type, for billing, internal and external reporting, research, and regulatory compliance. Under the direction of their manager, the coder should accurately code conditions and procedures as documented and in accordance with the ICD-10-CM Official Guidelines for Coding and Reporting. The coder scope may involve reviewing coding denial from payers and recommending the appropriate action to resolve the claim based on payer guidelines.</p><p><strong>Other Key Expectations:</strong></p><ul><li>Strong previous experience in rural health coding or FQHC coding</li><li>Willingness to be specialized in a multiple areas. Example: Orthopedics; Cardiology; Obstetrics, etc.</li><li>Meets or exceeds the coding quality standards as outlined.</li><li>Understands and adheres to all requirements in the Corporate Compliance Program.</li><li>Performs coding in an efficient and productive manner utilizing good time management and professional work habits. Meets productivity standards for position.</li><li>Continually enhances coding skills.</li><li>Maintains confidentiality and safeguards the privacy of protected health information.</li><li>Undertakes special projects and other duties as assigned by the Coding Manager.</li></ul><p><strong>Qualifications</strong></p><ul><li><strong>CPC Certification from AAPC</strong></li><li>Minimum 3 years previous rural health coding or FQHC coding experience</li><li>Proficiency in E&amp;M coding</li><li>Previous work with Medicaid and other payers in regards to RHC coding</li></ul><p><strong>Mental/Physical Requirements</strong></p><ul><li>Strong conceptual, as well as quantitative and qualitative analytical skills</li><li>Work as a member of a team as well as be a self-motivator with ability to work independently</li><li>Constantly operates a computer and other office equipment to coordinate work</li><li>Regularly uses close visual acuity and operates computer equipment to prepare and analyze and transmit data</li><li>Generally works in an office environment</li></ul><p><strong>EEO/C&amp;B Statement</strong></p><p><strong>Navigant</strong>&nbsp;<strong>Cymetrix</strong>&nbsp;is an Equal Employment Opportunity / Affirmative Action employer. All qualified applicants will receive consideration for employment without regard to race, color, national origin, ancestry, citizenship status, military status, protected veteran status, religion, creed, physical or mental disability, medical condition, marital status, sex, sexual orientation, gender, gender identity or expression, age, genetic information or any other basis protected by law, ordinance, or regulation.</p><p>Navigant will consider for employment qualified applicants with criminal histories in a manner consistent with the requirements of applicable law or ordinance including the Fair Chance Ordinance of Los Angeles and San Francisco.</p><p><strong>About Navigant</strong></p><p>Navigant Consulting, Inc. (NYSE: NCI) is a specialized, global professional services firm that helps clients take control of their future. Navigant’s professionals apply deep industry knowledge, substantive technical expertise, and an enterprising approach to help clients build, manage and/or protect their business interests. With a focus on markets and clients facing transformational change and significant regulatory or legal pressures, the Firm primarily serves clients in the healthcare, energy and financial services industries. Across a range of advisory, consulting, outsourcing, and technology/analytics services, Navigant’s practitioners bring sharp insight that pinpoints opportunities and delivers powerful results. More information about Navigant can be found at navigant.com.</p>        </div><div>        <a href='https://careers.insidenci.com/psc/careers/APPLICANT/APPL/c/HRS_HRAM_FL.HRS_CG_SEARCH_FL.GBL?Page=HRS_APP_JBPST_FL&amp;Action=U&amp;FOCUS=Applicant&amp;SiteId=1&amp;JobOpeningId=9403&amp;PostingSeq=1&amp;PortalActualURL=https://careers.insidenci.com/psc/careers/APPLICANT/APPL/c/HRS_HRAM_FL.HRS_CG_SEARCH_FL.GBL?Page=HRS_APP_JBPST_FL&amp;Action=U&amp;FOCUS=Applicant&amp;SiteId=1&amp;JobOpeningId=9403&amp;PostingSeq=1&amp;PortalRegistryName=APPLICANT&amp;PortalServletURI=https://careers.insidenci.com/psp/career' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "I_Gg1HefSPameLid7UcMNQ",
+    "url": "https://news.ycombinator.com/item?id=18129271",
+    "title": "FREELANCER - Open to opportunities. Location: Gent/Belgium Remote: YES (preferred actually) Willing to relocate: ...",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:com/dotnet/8",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=16, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 2:00:04 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>FREELANCER - Open to opportunities.<p>Location: Gent/Belgium</p><p>Remote: YES (preferred actually)</p><p>Willing to relocate: Maybe in the future (travel on occasion is fine though)</p><p>Technologies: Cloud (AWS/GCP/Azure/DO/...), Docker, K8S, OpenShift, Linux, Windows, Automation (Terraform, Packer, Ansible, ...), CI/CD (some hands-on knowledge, more architectural),</p><p>Résumé/CV: On request</p><p>Email:zephyrict [at] gmail . com</p><p>Hi interested reader! I'm an experienced System Engineer turned Solution, Cloud and Technical/Infrastructure Architect, my knowledge is quite broad but focussed on Cloud and Automation. I am a consultant, I have my own company (1 man company) and work short to long term opportunities. I love to share my knowledge and to design the perfect solutions that will contribute to your company's success! I design in-house solutions (from private-cloud to HA systems, DR, and more) as well as purely (public) Cloud solutions, my preferred Cloud platform is AWS but I have experience with other platforms as well. I also have experience with Docker/Container solutions, both in production as well as in DEV/ACC. If you're looking for an experienced Architect with real hands-on experience, able to talk with all sides and linking business with tech, don't hesitate to contact me!</p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "DiHzJvSHTzGM3toGacARtA",
+    "url": "http://jobmote.com/jobs/26614-100-remote-oracle-functional-wms-consultant-with-otc-om",
+    "title": "100% REMOTE :::: Oracle Functional WMS Consultant with OTC & OM",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG_TECH1:k/t/w:extjs/frontend/8",
+      "DBG_TECH1:k/t/w:jersey/java/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=8, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend",
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "Econosoft",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 2:23:10 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Position: Oracle Functional WMS Consultant with OTC &amp; OM</strong></p><p><strong>Location: Jersey City, NJ</strong></p><p><strong>Interview: Phone &amp; Skype</strong></p><p><strong>Duration: 4-6+ months with possibility of extension (s)</strong></p><p><strong>Skills: Oracle, WMS, OTC, OM, Order to Cash, Label Printing, Cartonizations, Pull Replenishment.</strong></p><p><strong>Position Summary</strong>** :**</p><p>Oracle functional WMS SME to resolve issues with Order to Cash, WMS Rules, Label Printing, Cartonizations, Pull Replenishment and Rule Simulations.</p><p>Able to troubleshoot, resolve and assist client with root cause analysis.</p><p>Secondary experience with Oracle Mfg. &amp; OM.</p><p><strong>Regards,</strong></p><p><strong>(ext 4357)</strong></p><ul><li>provided by Dice Oracle, WMS, OTC, OM, Order to Cash, Label Printing, Cartonizations, Pull Replenishment </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "vS3GnjJ5QAC7TIUubtLEOg",
+    "url": "http://jobmote.com/jobs/26573-sap-fico-consultant-aberdeen-scotland-50-remote-work-possible-s",
+    "title": "SAP FICO Consultant - Aberdeen, Scotland (50% Remote Work Possible). S",
+    "tags": [
+      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Eursap Ltd",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 2, 2018 8:21:21 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Our End Client in Aberdeen, Scotland is looking to hire an SAP FI/CO (Finance &amp; Controlling) Consultant to help with Business as Usual support work.Skills/Experience:<br>SAP FI-CO customization and Support experience (3 years minimum)<br>SAP VIM (Vendor Invoice Management) nice to have<br>Tasks include:<br>Month end<br>Ticket Resolution<br>Company Code builds<br>The company will cover expenses for onsite work and will consider 1 week remote work (work from home) every other week.Keywords: SAP, SAP FICO, SAP FI-CO, SAP FI/CO, SAP Finance &amp; Controlling, SAP FI, SAP Financial, SAP Finance, SAP CO, SAP Controlling </p></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "8auAZouRQAapi2JqaNUxQw",
     "url": "https://remote.co/job/assistant-vice-president-innovation/",
     "title": "Assistant Vice President, Innovation",
